Admin View: Added insert and delete function Fixed Geo Location grid sometimes not showing up
TODO:
Import function

--- a/app/views/adminView/_adminView.scss
+++ b/app/views/adminView/_adminView.scss
@@ -11,3 +11,11 @@
   box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px;
   border: 1px solid #0b97c4;
 }
+
+.tab-padding{
+  padding:20px;
+}
+
+.btn{
+  margin-left:10px;
+}
